--- a/styles/global.scss
+++ b/styles/global.scss
@@ -68,7 +68,7 @@ img {
     // margin-bottom: 108px;
     // position: absolute;
     position: absolute;
-    top: 108px;
+    top: 111px;
 
     .content {
         margin-left: 275px;
@@ -273,6 +273,32 @@ img {
         border-radius: 4px;
         border-style: solid;
         border-width: 1px;
+    }
+
+    .company-logo-container {
+        width: 100%;
+        padding: 10px 0;
+        display: flex;
+        .compare {
+            padding: 0 5px;
+        }
+        .compnay-logo {
+            
+            img.logo {
+                width: 80px;
+                height: 40px;
+                object-fit: scale-down;
+                box-shadow: 0 0 1px 0px #676767;
+                border-radius: 5px;
+                padding: 5px 10px;
+            }
+        }
+        .compare-text {
+            padding-top: 10px;
+        }
+        .compare-btn-container {
+            padding: 2px 5px;
+        }
     }
 }
 
