day week chart with compare data

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -300,6 +300,21 @@ img {
             padding: 2px 5px;
         }
     }
+
+}
+
+.compare-modal {
+    .added-companies {
+        font-size: 18px;
+        padding: 5px 60px;
+    }
+    .add-company-link {
+        padding: 0 60px;
+    }
+
+    .select-companies {
+        text-align: center;
+    }
 }
 
 // side bar style
