--- a/styles/global.scss
+++ b/styles/global.scss
@@ -235,8 +235,8 @@ img {
             flex-direction: row-reverse;
             div[class*="-container"] {
                 width: 25%;
-                padding: 0 2px;
-                font-size: 14px;
+                padding: 0 5px;
+                font-size: 13px;
                 z-index: 2;
             }
             // select {
@@ -409,12 +409,32 @@ img {
 
     .touchpoint-counts {
         // width: 30%;
-        text-align: center;
+        // text-align: center;
         line-height: 26px;
         width: 100%;
-        height: 215px;
-        padding-left: 45px;
-        padding-top: 10%;
+        // height: 215px;
+        // padding-left: 45px;
+        // padding-top: 10%;
+
+        .company-link {
+            text-decoration: none;
+        }
+
+        .list-group-item {
+            height: 45px;
+            border: none !important;
+        }
+
+        .compare-company-logo {
+            vertical-align: middle;
+            border-style: none;
+            width: 30px;
+        }
+
+        .compare-company-name {
+            margin-left: 10px;
+            font-size: 16px;
+        }
 
         #t_count {
             font-size: 48px;
@@ -426,16 +446,24 @@ img {
             font-weight: 700;
         }
 
+        .single-company-touchpoint {
+            text-align: center;
+        }
+
+        .company-touchpoints-count {
+            font-size: 15px;
+        }
+
         .date-range {
-            font-size: 11px;
+            text-align: center;
+            font-size: 13px;
             font-weight: 700;
             color: #161d35;
             display: block;
             background: #e5f5e6;
             border-radius: 20px;
             width: 70%;
-            margin-top: 3px;
-            margin: auto;
+            margin: 15px auto;
             border: 1px solid #4CAF50;
         }
     }
