--- a/styles/global.scss
+++ b/styles/global.scss
@@ -60,6 +60,21 @@ img {
     z-index: 0 !important;
 }
 
+.page-loading {
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: rgb(21, 25, 31);
+    text-align: center;
+    img {
+        position: absolute;
+        width: 600px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+}
+
 // layout style
 .content-wrapper {
     width: 100%;
